dog-classifier/templates/classifier-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: classifier-api-ingress
  namespace: dog-classifier
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: classifier.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: classifier-api
            port:
              number: 8000
